Prevent line break on desktop

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,7 +1,7 @@
 .about {
     text-align: center;
     background: rgba(21, 58, 104, 0.075);
-    width: 60%;
+    width: 65%;
     margin: 3.2rem auto 1.6rem auto;
     padding: 1.6rem 3.2rem;
     border-radius: 20px;
